# adventofcode

./: Cargo.toml
2016/: Cargo.toml
2017/postgresql/: 21a.sql
2017/rust/: Cargo.toml
2018/postgresql/: 1b.sql  run
2019/postgresql/: 1a.sql  1b.sql  2b.sql  3b.sql  4a.sql  6a.sql  7b.sql  8a.sql
2020/postgresql/: 10b.sql  12a.sql  12b.sql  13b.sql  14a.sql  14b.sql  15b.sql  16b.sql  17a.sql  17b.sql  18a.sql  18b.sql  19a.sql  19b.sql  20a.sql  20b.sql  21a.sql  21b.sql  23b.sql  24a.sql  25a.sql  2a.sql  2b.sql  4a.sql  5a.sql  5b.sql  6a.sql  6b.sql  7b.sql  8b.sql  9b.sql  run
2021/postgresql/: 10a.sql  10b.sql  11b.sql  13a.sql  13b.sql  1a.sql  2a.sql  2b.sql  3a.sql  4a.sql  6.sql  7b.sql  9b.sql
2022/: Cargo.toml
2022/src/: main.rs
2023/src/: main.rs
postgresql/: README  run
postgresql/2017/: 21b.sql
postgresql/2018/: 1a.sql
postgresql/2019/: 1a.sql  2a.sql  2b-volatile-broken.sql  2b-volatile-broken.txt  3a.sql  4b.sql  5a.sql  5b.sql  6b.sql  7a.sql  8b.sql
postgresql/2020/: 10a.sql  11a.sql  11b.sql  13a.sql  14a.sql  14b.sql  15a.sql  16a.sql  16b.sql  19b.sql  1a.sql  1b.sql  21a.sql  22a.sql  22b.sql  23a.sql  24b.sql  3a.sql  3b.sql  4b.sql  5a.sql  7a.sql  8a.sql  9a.sql
postgresql/2021/: 11a.sql  12a.sql  12b.sql  1a.sql  1b.sql  3b.sql  4b.sql  5a.sql  5b.sql  7a.sql  8a.sql  8b.sql  9a.sql
src/: day.rs  main.rs  puzzle.rs  puzzle_result.rs  year.rs
src/aoc2015/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/aoc2016/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  mod.rs
src/aoc2017/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  knot_hash.rs  mod.rs
src/aoc2022/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/aoc2023/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  mod.rs  (+14 more)
(+62 files in other folders)
